Fix spacing of login buttons

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -9,6 +9,7 @@ body a {
 
 .container a {
   color: #3B5555;
+  line-height: 1.5em;
 }
 
 .container a:hover {
